Adjust css to ensure navbar section heading isn't covering headings, correct link routing, and remove unnecessary event.html (linked navbar directly to event section)

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -39,8 +39,7 @@ h2 {
 }
 
 .section {
-    margin-top: 2rem;
-    margin-bottom: 2rem;
+   padding-top: 4rem; /* prevent navbar overlap */
 }
 
 /* Buttons */
